<resources>
    <string name="app_name">TiffinSystem</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="cart">Cart</string>
    <string name="my_orders">My Orders</string>
    <string name="restaurants">Restaurants</string>
    <string name="fast_food">Fast Food</string>
    <string name="help">Help</string>
    <string name="contact_us">Contact Us</string>
    <string name="continu">CONTINUE</string>
    <string name="no_other_time">NO, OTHER TIME</string>
    <string name="please_enter_your_mobile_number_to_receive_a_verification_code">Please enter your mobile number to receive a verification code.</string>
    <string name="verify">Verify</string>
    <string name="profile">Profile</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_main2">Main2Activity</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="edit_profile">Edit Profile:</string>
    <string name="name">Name</string>
    <string name="cancel">Cancel</string>
    <string name="save">Save</string>
</resources>
