<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:title="@string/menu_home" />
        <item
            android:id="@+id/nav_gallery"
            android:title="@string/cart" />
        <item
            android:id="@+id/nav_slideshow"
            android:title="@string/my_orders" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/restaurants" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/fast_food" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/profile" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/help" />
        <item
            android:id="@+id/nav_tools"
            android:title="@string/contact_us" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"
                android:title="@string/menu_send" />
        </menu>
    </item>

</menu>
